--- a/draft/draft.bib
+++ b/draft/draft.bib
@@ -197,11 +197,40 @@
 }
 
 @misc{truvadagenericblog,
-  author = {Ethan, Guillen},
-  title = {When Might Generic Truvada Be Available for PrEP in the US?},
-  journal = {Ethan The Blog},
-  type = {Blog},
-  number = {March 16},
-  year = {2015},
-  howpublished = {\url{http://www.ethantheblog.info/?p=50}
+  author={Ethan, Guillen},
+  title={When Might Generic Truvada Be Available for PrEP in the US?},
+  journal={Ethan The Blog},
+  type={Blog},
+  number={March 16},
+  year={2015},
+  howpublished={\url{http://www.ethantheblog.info/?p=50}}
 }
+
+@misc{prephurtingcause,
+  author={Steven, Banning},
+  title={why PrEP is hurting the cause},
+  journal={Queer Voices},
+  type={Blog},
+  year={2015},
+  howpublished={\url{http://queer-voices.com/2015/08/why-prep-is-hurting-the-cause/}}
+}
+
+@misc{caseforprep,
+  author={Evan, Peterson},
+  title={The Case for PrEP, or How I Learned to Stop Worrying and Love HIV-Postive Guys},
+  journal={The Stranger},
+  type={Blog},
+  year={2014},
+  howpublished={\url{http://www.thestranger.com/seattle/the-case-for-prep-or-how-i-learned-to-stop-worrying-and-love-hiv-positive-guys/Content?oid=20991643}}
+}
+
+@misc{truvadawhore,
+  author={David, Duran},
+  title={Truvada Whores?},
+  journal={Huffington Post},
+  type={Blog},
+  year={2012},
+  howpublished={\url{http://www.huffingtonpost.com/david-duran/truvada-whores_b_2113588.html}}
+}
+
+
