--- a/draft/draft.bib
+++ b/draft/draft.bib
@@ -234,3 +234,8 @@
 }
 
 
+@misc{sentimentdata,
+  title = {Twitter Sentiment Corpus},
+  howpublished = {\url{http://www.sananalytics.com/lab/twitter-sentiment/}},
+  note = {Accessed: 2016-03-14}
+}
