--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -399,7 +399,7 @@ The last tweet in the positive tweets table (Table 3), referencing the hashtag "
 
 In this article we use a variety of NLP techniques to analyze a tweet corpus in order to monitor the national social media discussion for HIV prevention. We identified several notable trends. Firstly, we found that PrEP discussion is increasing on social media, Secondly we found that people who mention PrEP also talk about general health, STDs, stigma, and politics.
 
-By picking out the most relevant tweets to PrEP, and also classifying tweets as positive or negative, we quickly identified a handful of specific tweets that highlight important parts of the online PrEP discussion. We identified two important arguments for and against PrEP. One, as explored by blog author Steven Banning hypothesizes that PrEP adoption could lead to unintended, and unhealthy risk seeking behavior. The contrary hypothesis, described by blog author Even Peterson, suggests that PrEP adoption is a product of healthy, responsible at-risk individuals who are gaining HIV protection in an effective form. These opposing arguments were identified automatically using large scale social media data. Further investigation and data analysis, of social media data, or other health data may be able to quantify PrEP and Truvada's effectiveness in the ongoing effort to prevent HIV infection.
+By picking out the most relevant tweets to PrEP, and also classifying tweets as positive or negative, we quickly identified a handful of specific tweets that highlight important parts of the online PrEP discussion. We identified two important arguments for and against PrEP. One, as explored by blog author Steven Banning hypothesizes that PrEP adoption could lead to unintended, and unhealthy risk seeking behavior. The contrary hypothesis, described by blog author Evan Peterson, suggests that PrEP adoption is a product of healthy, responsible at-risk individuals who are gaining HIV protection in an effective form. These opposing arguments were identified automatically using large scale social media data. Further investigation and data analysis, of social media data, or other health data may be able to quantify PrEP and Truvada's effectiveness in the ongoing effort to prevent HIV infection.
 
 Future analyses may also take advantage of the rich Twitter API. An additional refinement of the analyses presented here may take a more active approach. Rather than simple passive data collection, we could build a twitter bot to interact with HIV and PrEP-tweeters, or conduct a social media based health survey. Finally, future HIV and PrEP research may benefit from the incorporation of multiple data sources, either multiple social media sources, multiple health information sources, or both.
 
